--- a/styles2.css
+++ b/styles2.css
@@ -1,13 +1,13 @@
 /* Define colors */
 :root {
-    --baby-blue: #a2d8f9;
-    --white: #ffffff;
+    --baby-blue: #89cff0; /* Baby Blue */
+    --black: #000000; /* Black */
 }
 
 /* Apply color scheme */
 body {
-    background-color: var(--baby-blue);
-    color: var(--white);
+    background-color: var(--baby-blue); /* Baby Blue */
+    color: var(--black); /* Black */
 }
 
 /* Add IDs and classes */
@@ -15,7 +15,7 @@ body {
     width: 80%;
     margin: 0 auto;
     padding: 20px;
-    background-color: var(--white);
+    background-color: white;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -36,8 +36,8 @@ p {
 .box {
     width: 100px;
     height: 100px;
-    background-color: var(--baby-blue);
-    color: var(--white);
+    background-color: var(--black); /* Black */
+    color: white;
     text-align: center;
     line-height: 100px;
     margin: 10px;
